[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Spot.gd" type="Script" id=1]
[ext_resource path="res://assets/TicTacToe-Spritesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="Spot" type="Area2D"]
script = ExtResource( 1 )

[node name="Spot" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 0, 64, 64 )

[node name="SpotCollision" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
